--- a/SINMx86/My Project/Resources.resx
+++ b/SINMx86/My Project/Resources.resx
@@ -118,21 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Splash_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SplashBackgrounds\yumi.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Splash_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SplashBackgrounds\yuzuki.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Splash_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SplashBackgrounds\midori.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Splash_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SplashBackgrounds\montana.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Splash_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SplashBackgrounds\hikari.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Control_Load" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Controls\load.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,5 +142,19 @@
   <data name="Control_Screenshot" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Controls\screenshot.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-
+  <data name="Splash_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash\yumi.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Splash_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash\midori.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Splash_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash\yuzuki.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Splash_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash\hikari.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Splash_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Splash\montana.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
