--- a/SINMx86/My Project/Resources.resx
+++ b/SINMx86/My Project/Resources.resx
@@ -160,4 +160,7 @@
   <data name="Splash_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Splash\montana.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Control_CPU" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Controls\cpu.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
