--- a/SINMx86/My Project/Resources.resx
+++ b/SINMx86/My Project/Resources.resx
@@ -163,4 +163,7 @@
   <data name="Control_CPU" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Controls\cpu.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Control_NIC" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Controls\nic.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
