--- a/SINMx86/My Project/Resources.resx
+++ b/SINMx86/My Project/Resources.resx
@@ -166,4 +166,13 @@
   <data name="Control_NIC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Controls\nic.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SMART_Critical" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Controls\smart_error.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SMART_OK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Controls\smart_ok.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SMART_Warning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Controls\smart_warning.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
